--- a/integrated_calendar/static/styles/tasks.css
+++ b/integrated_calendar/static/styles/tasks.css
@@ -330,6 +330,7 @@ margin-top: 3.5%;
 text-align:center;
 font-size: 2rem;
 font-weight: 500;
+color: #2d016c;
 text-transform: uppercase;
 pointer-events: none;
 }
