--- a/integrated_calendar/views/announcements.html
+++ b/integrated_calendar/views/announcements.html
@@ -39,8 +39,8 @@
                 <li><a href="calendar.html"><i class="far fa-calendar"></i>Calendar</a></li>
                 <li><a href="task_checklist.html"><i class="fas fa-tasks"></i>Task Checklist</a></li>
                 <li class="li-active"><a class="a-active" href="#"><i class="fas fa-bullhorn"></i>Announcements</a></li>
-                <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
-                <li><a href="#"><i class="far fa-question-circle"></i>Help</a></li>
+                <li><a href="../../settings.php"><i class="fas fa-cog"></i>Settings</a></li>
+                <li><a href="#help"><i class="far fa-question-circle"></i>Help</a></li>
                 <li><a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
             </ul>
         </div>
