--- a/integrated_calendar/views/task_checklist.html
+++ b/integrated_calendar/views/task_checklist.html
@@ -51,10 +51,10 @@
         <label for="menu-bar" class="fas fa-bars"></label>
         <nav class="navbar">
             <a href="../../landing.html">Home</a>
-            <a href="calendar.html">Calendar</a>
+            <a href="./calendar.html">Calendar</a>
             <a href="#taskchecklist">Task Checklist</a>
-            <a href="announcements.html">Announcements</a>
-            <a href="#settings">Settings</a>
+            <a href="./announcements.html">Announcements</a>
+            <a href="../../settings.php">Settings</a>
             <a href="#help">Help</a>
             <a href="#" onclick="logout();">Logout</a>
         </nav>
@@ -65,11 +65,11 @@
             <h2><a href="../../landing.html">Trestle</a></h2>
             <ul>
                 <li><a href="../../landing.html"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="calendar.html"><i class="far fa-calendar"></i>Calendar</a></li>
+                <li><a href="./calendar.html"><i class="far fa-calendar"></i>Calendar</a></li>
                 <li class="li-active"><a class="a-active" href="#"><i class="fas fa-tasks"></i>Task Checklist</a></li>
-                <li><a href="announcements.html"><i class="fas fa-bullhorn"></i>Announcements</a></li>
-                <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
-                <li><a href="#"><i class="far fa-question-circle"></i>Help</a></li>
+                <li><a href="./announcements.html"><i class="fas fa-bullhorn"></i>Announcements</a></li>
+                <li><a href="../../settings.php"><i class="fas fa-cog"></i>Settings</a></li>
+                <li><a href="#help"><i class="far fa-question-circle"></i>Help</a></li>
                 <li><a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
             </ul>
         </div>
