removed the email from UI and display

--- a/integrated_calendar/views/calendar.html
+++ b/integrated_calendar/views/calendar.html
@@ -67,10 +67,9 @@
                         <option value="2">Week</option>
                     </select>
                     <div>
-                        <button id="prev">
-                            << /button>
-                                <button id="today">Today</button>
-                                <button id="next">></button>
+                        <button id="prev"><</button>
+                        <button id="today">Today</button>
+                        <button id="next">></button>
                     </div>
                 </div>
 
