--- a/landing.css
+++ b/landing.css
@@ -81,7 +81,7 @@ display:flex;
 align-items: center;
 justify-content: space-between;
 z-index: 1000;
-border-bottom: 1px solid #999;
+border-bottom:1px solid rgba(225,225,225,0.2);
 transition: 2s ease;
 }
 header .logo{
@@ -138,23 +138,7 @@ font-size: 1.7rem;
 padding: 1rem 0;
 pointer-events: none;
 }
-.custom-shape-divider-bottom-1639584489 {
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-overflow: hidden;
-line-height: 0;
-}
-.custom-shape-divider-bottom-1639584489 svg {
-position: relative;
-display: block;
-width: calc(100% + 1.3px);
-height: 100px;
-}
-.custom-shape-divider-bottom-1639584489 .shape-fill {
-fill: #f9f9f9;
-}
+
 /** For mobile devices **/
 @media (max-width: 767px) {
 .custom-shape-divider-bottom-1639584489 svg {
