--- a/landing.css
+++ b/landing.css
@@ -326,7 +326,7 @@ padding:0 3%;
 padding-top: 7.5rem;
 }
 }
-@media (max-width:768px){
+@media (max-width:820px){
 header label{
 visibility: visible;
 opacity: 1;
@@ -395,6 +395,19 @@ font-size:2rem;
 font-size:1.5rem;
 padding:1rem;
 }
+.box{
+  flex:1 1 10rem !important;
+width: fit-content !important;
+}
+.footer .box-container .box h3{
+  font-size:2rem;
+  }
+  .footer .box-container .box p{
+  font-size:1rem;
+  }
+  .footer .box-container .box a{
+  font-size:1rem;
+  }
 }
 @media (max-width:450px){
 html{
