--- a/index.css
+++ b/index.css
@@ -1,509 +1,425 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap');
+:root{
+--teal:#2D83A1;
+--serpent:#61D2D1;
+--orange:#fdaf67;
+--salmon:#fd789d;
+--magenta:#d108d6;
+--indigo:#013088;
+--gradient:linear-gradient(90deg, var(--orange), var(--salmon), var(--magenta));
+--gradient2:linear-gradient(90deg, var(--magenta), var(--indigo));
+}
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Rubik', sans-serif;
+text-decoration: none; outline: none;
+scroll-behavior: smooth;
+}
+*::selection{
+background: var(--teal);
+color: #fff;
+}
+html{
+font-size: 62.5%;
+overflow-x: hidden;
+transition: 1s 0.7s ease-in-out;
+}
+body{
+background:#f9f9f9;
+}
+section{
+min-height:100vh;
+padding:0 9%;
+padding-top: 7.5rem;
+}
+.btn{
+display: inline-block;
+margin-top: 0.8rem;
+padding:1rem 3rem;
+border: none;
+border-radius:5rem;
+background: var(--gradient);
+backdrop-filter: blur(5px);
+font-size: 1.7rem;
+font-weight: 500;
+text-transform: uppercase;
+color: white;
+cursor: pointer;
+box-shadow: 0 .5rem 1rem rgba(0,0,0,.7);
+transition: all .3s linear;
+}
+.btn:hover{
+transform: scale(1.1);
+}
+.fa-arrow-right{
+font-size: 2rem;
+margin-left: 1rem;
+}
+.heading{
+text-align: center;
+background: var(--gradient2);
+color:transparent;
+-webkit-background-clip: text;
+background-clip:text;
+font-size:3.5rem;
+text-transform: uppercase;
+padding:1rem;
+text-shadow: 3px 3px 5px rgba(0, 0, 0, .4);
+pointer-events: none;
+}
+header{
+position: fixed;
+top: 0; left: 0;
+padding: 2rem 9%;
+width: 100%;
+background: rgba(9,16,91,.9);
+backdrop-filter: blur(5px);
+box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+display:flex;
+align-items: center;
+justify-content: space-between;
+z-index: 1000;
+border-bottom:1px solid rgba(225,225,225,0.2);
+transition: 2s ease;
+}
+header .logo{
+font-size: 2.5rem;
+font-weight: bold;
+color:white;
+text-shadow: 2px 2px 5px black;
+text-transform: uppercase;
+}
+header .navbar a{
+font-size: 1.8rem;
+margin-left: 2rem;
+color:white;
+text-shadow: 2px 2px 5px black;
+}
+header .navbar a:hover{
+color: var(--teal);
+}
+header input{
+display: none;
+}
+header label{
+font-size: 3rem;
+color: white;
+cursor: pointer;
+visibility: hidden;
+opacity: 0;
+}
+header label:hover{
+color: var(--teal);
+}
+.home{
+color: white;
+display:flex;
+align-items: center;
+justify-content: center;
+background: url(images/bg.jpg);
+background-position: center;
+}
+.home .image img{
+width: 40vw;
+}
+.home .content h3{
+font-size: 5rem;
+text-transform: uppercase;
+pointer-events: none;
+}
+.home .content h3 span{
+font-size: 8rem;
+text-transform: uppercase;
+}
+.home .content p{
+font-size: 1.7rem;
+padding: 1rem 0;
+pointer-events: none;
 }
 
-body,
-input {
-  font-family: 'Rubik', sans-serif;
+/** For mobile devices **/
+@media (max-width: 767px) {
+.custom-shape-divider-bottom-1639584489 svg {
+width: calc(100% + 1.3px);
+height: 55px;
 }
-
-.container {
-  position: relative;
-  width: 100%;
-  background-image: url(images/back.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-  overflow: hidden;
 }
-.filter{
-  z-index: 1;
-  content:'';
-  position: absolute;
-  background: rgb(65,88,102, 0.2);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+.body-container{
+background: url(images/body-bg.png);
+background-size: auto 100%;
+background-position: center;
+padding-bottom: 5rem;
 }
-.forms-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+h1{
+text-align: center;
 }
-
-.signin-signup {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 75%;
-  width: 50%;
-  transition: 1s 0.7s ease-in-out;
-  display: grid;
-  grid-template-columns: 1fr;
-  z-index: 5;
+/*Body Design*/
+.features .box-container{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content:center;
+margin: auto;
 }
-
-form {
+.features .box-container .box{
+flex: 1 1 30rem;
+background: #fff;
+border-radius:1rem;
+border: 1px solid rgba(0,0,0,.2);
+box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+margin: 1.5rem;
+padding:4rem 3rem;
+text-align: center;
+}
+.features .box-container .box img{
+height: 25rem;
+transition: all 0.5s ease-in-out;
+}
+.features .box-container .box img:hover{
+transform: translateY(-0.8rem);
+}
+.features .box-container .box h3{
+font-size:2rem;
+color: #333;
+pointer-events: none;
+margin-bottom: 0.5rem;
+}
+.features .box-container .box p{
+font-size:1.5rem;
+color: #666;
+pointer-events: none;
+text-align: justify;
+}
+.about .heading{
+margin-bottom: 2%;
+}
+.about-container{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content:center;
+margin: 2rem;
+background: #fff;
+border-radius:1rem;
+border: 1px solid rgba(0,0,0,.2);
+box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+padding:5rem;
+}
+.about-container img{
+height:40rem;
+text-align: center;
+justify-content: center;
+padding: 2rem;
+transition: all 0.5s ease-in-out;
+}
+.about-container img:hover{
+transform: translateY(-0.8rem);
+}
+.about-container h3{
+font-size:4rem;
+color: #333;
+pointer-events: none;
+margin-bottom: 2rem;
+text-align: center;
+}
+.about-container p{
+font-size:1.8rem;
+color: #666;
+pointer-events: none;
+text-align: justify;
+padding: 0 4rem;
+}
+.information{
+  display:flex;
+  flex-direction:row;
+}
+.information .about-container{
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  padding: 0rem 5rem;
-  transition: all 0.2s 0.7s;
-  overflow: hidden;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-form.sign-up-form {
-  opacity: 0;
-  z-index: 1;
-}
-
-form.sign-in-form {
-  z-index: 2;
-}
-
-.title {
-  font-size: 3rem;
-  text-shadow: 2px 2px 5px black;
-  color: white;
-  margin-bottom: 10px;
-}
-
-.input-field {
-  max-width: 380px;
-  width: 100%;
-  background-color: #f0f0f0;
-  margin: 10px 0;
-  height: 55px;
-  border-radius: 55px;
-  display: grid;
-  grid-template-columns: 15% 85%;
-  padding: 0 0.4rem;
-  position: relative;
-}
-
-.input-field i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  transition: 0.5s;
-  font-size: 1.1rem;
-}
-
-.input-field input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
-}
-
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
-}
-
-.social-text {
-  text-align: center;
-  padding: 0.7rem 0;
-  font-size: 1rem;
-  color:white;
-}
-
-.social-media {
-  display: flex;
-  justify-content: center;
-}
-
-.social-icon {
-  height: 46px;
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0.45rem;
-  color: white;
-  border-radius: 50px;
-  border: 1px solid white;
-  text-decoration: none;
-  font-size: 1.1rem;
-  transition: 0.3s;
-}
-
-.social-icon:hover {
-  color: #4481eb;
-  border-color: #4481eb;
-}
-
-.btn {
-  width: 150px;
-  background: rgba(255, 255, 255, 0.2);
-  color: #fff;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  box-shadow: 2px 2px 5px rgba(53,56,57, 0.8);
-  outline: none;
-  height: 49px;
-  border-radius: 49px;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin: 10px 0;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.btn:hover {
-  background: transparent;
-}
-.panels-container {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-.image{
-  padding-left: 10%;
-  width: 90%;
-  transition: 1.1s .4s ease-in-out;
-}
-
-.container:before {
-  content: "";
-  position: absolute;
-  height: 3000px;
-  width: 3000px;
-  top: 10%;
-  right: 48%;
-  transform: translateY(-50%);
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(5px);
-  transition: 1.8s ease-in-out;
-  border: 1px solid white;
-  border-radius: 50%;
-  z-index: 6;
-}
-
-.panel {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
-  text-align: center;
-  z-index: 6;
-}
-
-.left-panel {
-  pointer-events: all;
-  padding: 2rem 17% 2rem 12%;
-}
-
-.right-panel {
-  pointer-events: none;
-  padding: 2rem 12% 2rem 17%;
-}
-
-.panel .content {
-  color: #fff;
-  transition: transform 0.9s ease-in-out;
-  transition-delay: 0.6s;
-  text-shadow: 1px 1px 5px black;
-}
-
-.panel h3 {
-  font-weight: 600;
-  line-height: 1;
-  font-size: 2.5rem;
-}
-
-.panel p {
-  font-size: 1.2rem;
-  padding: 1.5rem 0;
-}
-
-.btn.transparent {
-  margin: 0;
-  background: none;
-  border: 1px solid #fff;
-  width: 130px;
-  height: 41px;
-  font-family: 'Rubik', sans-serif;
-  font-weight: 600;
-  font-size: 0.8rem;
-  text-shadow: 1px 1px 5px black;
-}
-
-.right-panel .content, .right-panel .image{
-  transform: translateX(1200px);
-}
-
-/* ANIMATION */
-.container.sign-up-mode:before {
-  transform: translate(100%, -50%);
-  right: 52%;
-}
-
-.container.sign-up-mode .left-panel .content,
-.container.sign-up-mode .left-panel .image {
-  transform: translateX(-1200px);
-}
-
-.container.sign-up-mode .signin-signup {
-  left: 25%;
-}
-
-.container.sign-up-mode form.sign-up-form {
-  opacity: 1;
-  z-index: 2;
-}
-
-.container.sign-up-mode form.sign-in-form {
-  opacity: 0;
-  z-index: 1;
-}
-
-.container.sign-up-mode .right-panel .content,
-.container.sign-up-mode .right-panel .image {
-  transform: translateX(0%);
-}
-
-.container.sign-up-mode .left-panel {
-  pointer-events: none;
-}
-
-.container.sign-up-mode .right-panel {
-  pointer-events: all;
-}
-/*4K monitors (2560px)*/
-@media (max-width:2560px) {
-  .title {
-    font-size: 5rem;
-    margin-bottom: 10px;
   }
-  
-  .input-field {
-    max-width: 500px;
-    margin: 10px 0;
-    height: 70px;
+.footer{
+background: linear-gradient(to bottom,#0b1b70,#01034d);
+padding-top: 3rem;
+}
+.footer .box-container{
+display: flex;
+flex-wrap: wrap;
+}
+.footer .box-container .box{
+flex: 1 1 25rem;
+margin: 2rem;
+}
+.footer .box-container .box h3{
+font-size:2.5rem;
+padding: 1rem 0;
+color: white;
+text-decoration: underline;
+text-underline-offset: 1rem;
+}
+.footer .box-container .box p{
+color: white;
+font-size:1.5rem;
+padding: .5rem 0;
+}
+.footer .box-container .box a{
+color: white;
+display: block;
+font-size:1.5rem;
+padding: .5rem 0;
+}
+.footer .box-container .box a:hover{
+color: white;
+text-decoration: underline;
+}
+.footer .box-container .box .info{
+color: white;
+display: flex;
+align-items: center;
+}
+.footer .box-container .box .info i{
+color: white;
+margin: .5rem 0;
+margin-right: 1rem;
+border-radius: 50%;
+font-size: 1.5rem;
+height: 4.5rem;
+width: 4.5rem;
+line-height: 4.5rem;
+text-align: center;
+}
+.footer .credit{
+font-size:1.5rem;
+font-weight: normal;
+letter-spacing: .05rem;
+color: white;
+border-top: .1rem solid #fff5;
+padding:2,5rem 1rem;
+text-align: center;
+}
+/*scrolleffects*/
+.reveal{
+position: relative;
+transform: translateY(150px);
+opacity: 0;
+transition: all 1.5s ease;
+}
+.reveal.active{
+transform: translateY(0px);
+opacity: 1;
+}
+/*media queries*/
+@media (max-width:1440px){
+html{
+font-size: 45%;
+}
+}
+@media (max-width:1200px){
+html{
+font-size: 45%;
+}
+}
+@media (max-width:991px){
+section{
+padding:0 3%;
+padding-top: 7.5rem;
+}
+}
+@media (max-width:820px){
+header label{
+visibility: visible;
+opacity: 1;
+text-shadow: 2px 2px 5px black;
+}
+header .navbar{
+position: absolute;
+top: 100%; left: 0;
+width: 100%;
+background: #fff;
+padding: 1rem 2rem;
+border-top: .1rem solid rgba(0, 0, 0, .2);
+box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+transform-origin: top;
+transform: scaleY(0);
+opacity: 0;
+transition: all .2s linear;
+}
+header .navbar a{
+display: block;
+margin: 2rem 0;
+font-size:2rem;
+color: black;
+text-shadow: none;
+font-weight:500;
+}
+header input:checked ~ .navbar{
+transform: scaleY(1);
+opacity: 1;
+transition: all .2s linear;
+}
+header input:checked ~ label::before{
+content: '\f00d'
+}
+.home{
+flex-flow: column-reverse;
+}
+.home .image img{
+width: 50%;
+margin-left: 25%;
+}
+.home .content h3{
+font-size:4rem;
+}
+.home .content h3 span{
+font-size:4rem;
+}
+.home .content p{
+font-size:2rem;
+}
+.features .box-container .box img{
+height: 25rem;
+}
+.about-container{
+flex-direction: column;
+padding: 1rem;
+}
+.about-container img{
+height:20rem;
+margin-bottom: 3rem;
+}
+.about-container h3{
+font-size:2rem;
+}
+.about-container p{
+font-size:1.5rem;
+padding:1rem;
+}
+.box{
+  flex:1 1 10rem !important;
+width: fit-content !important;
+}
+.footer .box-container .box h3{
+  font-size:2rem;
   }
-  
-  .input-field i {
-    margin-top: 5px;
-    text-align: center;
-    font-size: 1.8rem;
+  .footer .box-container .box p{
+  font-size:1rem;
   }
-  
-  .input-field input {
-    font-size: 1.5rem;
-  }
-
-  .social-text {
-    font-size: 1.6rem;
-  }
-  .btn {
-    width: 180px;
-    height: 60px;
-    font-size: 1.4rem;
-  }
-  .panel h3 {
-    font-size: 4.5rem;
-  }
-  .panel p {
-    font-size: 1.8rem;
-  }
-  .btn.transparent {
-    width: 180px;
-    height: 60px;
-    font-size: 1.3rem;
-  }
-  .social-icon {
-    height: 60px;
-    width: 280px;
-    font-size: 1.5rem;
+  .footer .box-container .box a{
+  font-size:1rem;
   }
 }
-/*1920x1080p monitors*/
-@media (max-width:1920px) {
-  .title {
-    font-size: 3rem;
-    margin-bottom: 10px;
-  }
-  
-  .input-field {
-    max-width: 380px;
-    height: 55px;
-  }
-  
-  .input-field i {
-    margin-top: 0;
-    text-align: center;
-    font-size: 1.3rem;
-    padding-bottom: 10px;
-  }
-  
-  .input-field input {
-    font-size: 1.3rem;
-    padding-bottom: 10px;
-  }
-  .social-text {
-    font-size: 1rem;
-  }
-  .btn {
-    width: 140px;
-    height: 40px;
-    font-size: 1rem;
-  }
-  .panel h3 {
-    font-size: 3rem;
-    margin-bottom: 0%;
-  }
-  .panel p {
-    font-size: 1.3rem;
-  }
-  .btn.transparent {
-    width: 120px;
-    height: 40px;
-    font-size: 0.9rem;
-  }
-  .social-icon {
-    height: 50px;
-    width: 190px;
-    font-size: 1rem;
-  }
+@media (max-width:450px){
+html{
+font-size: 50%;
 }
-/*Tablets/Ipad*/
-@media (max-width: 870px) {
-  .container {
-    min-height: 800px;
-    height: 100vh;
-  }
-  .signin-signup {
-    width: 100%;
-    top: 95%;
-    transform: translate(-50%, -100%);
-    transition: 1s 0.8s ease-in-out;
-  }
-
-  .signin-signup,
-  .container.sign-up-mode .signin-signup {
-    left: 50%;
-  }
-
-  .panels-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-  }
-
-  .panel {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2.5rem 8%;
-    grid-column: 1 / 2;
-  }
-
-  .image{
-    width: 50%;
-  }
-  .right-panel {
-    grid-row: 3 / 4;
-  }
-
-  .left-panel {
-    grid-row: 1 / 2;
-  }
-
-  .panel .content {
-    padding-right: 15%;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.8s;
-  }
-
-  .panel h3 {
-    font-size: 1.2rem;
-  }
-
-  .panel p {
-    font-size: 0.7rem;
-    padding: 0.5rem 0;
-  }
-
-  .btn.transparent {
-    width: 110px;
-    height: 35px;
-    font-size: 0.7rem;
-  }
-
-  .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
-  }
-
-  .container.sign-up-mode:before {
-    transform: translate(-50%, 100%);
-    bottom: 32%;
-    right: initial;
-  }
-
-  .container.sign-up-mode .left-panel .content {
-    transform: translateY(-300px);
-  }
-
-  .container.sign-up-mode .right-panel .content {
-    transform: translateY(0px);
-  }
-
-  .right-panel .content{
-    transform: translateY(300px);
-  }
-
-  .container.sign-up-mode .signin-signup {
-    top: 5%;
-    transform: translate(-50%, 0);
-  }
+.features .box-container .box img{
+height: 15rem;
 }
-/*Mobile Phones*/
-@media (max-width: 570px) {
-  form {
-    padding: 0 1.5rem;
-  }
-  .image{
-    display: none;
-  }
-
-  .panel .content {
-    padding: 0.5rem 1rem;
-  }
-  
-  .container {
-    padding: 1.5rem;
-  }
-
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
-
-  .container.sign-up-mode:before {
-    bottom: 25%;
-    left: 50%;
-  }
+.features .box-container{
+flex-direction: column;
+}
+.information{
+flex-direction: column;
+}
 }
