place holders for handling the "recurring" requirement for minor revision

--- a/integrated_calendar/views/add_schedule.html
+++ b/integrated_calendar/views/add_schedule.html
@@ -31,6 +31,28 @@
                     <label>Remind Date: </label>
                     <input class="form-date" type="date" name="remind-date">
                 </div>
+                <!-- Place holders while waiting for the recurring range -->
+                <h1>Handling Range, 1 or 2?</h1>
+                <h3>Range 1</h3>
+                <div class="form-field-date">
+                    <label>[placeholder] Start Remind Date: </label>
+                    <input class="form-date" type="datetime-local" name="#">
+                </div>
+
+                <div class="form-field-date">
+                    <label>[placeholder] End Date: </label>
+                    <input class="form-date" type="datetime-local" name="#">
+                </div>
+
+                <h3>Range 2</h3>
+                <input type="checkbox" name="" id=""> Sunday
+                <input type="checkbox" name="" id=""> Monday
+                <input type="checkbox" name="" id=""> Tuesday
+                <input type="checkbox" name="" id=""> Wednesday
+                <input type="checkbox" name="" id=""> Thursday
+                <input type="checkbox" name="" id=""> Friday
+                <input type="checkbox" name="" id=""> Saturday
+                <!-- End place holders -->
 
                 <div class="form-field">
                     <label>Is Recurring: </label>
