--- a/integrated_calendar/views/add_schedule.html
+++ b/integrated_calendar/views/add_schedule.html
@@ -31,33 +31,42 @@
                     <label>Remind Date: </label>
                     <input class="form-date" type="date" name="remind-date">
                 </div>
+
                 <!-- Place holders while waiting for the recurring range -->
-                <h1>Handling Range, 1 or 2?</h1>
-                <h3>Range 1</h3>
-                <div class="form-field-date">
-                    <label>[placeholder] Start Remind Date: </label>
-                    <input class="form-date" type="datetime-local" name="#">
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_sun" value="0">
+                    <label> Sunday </label>
                 </div>
-
-                <div class="form-field-date">
-                    <label>[placeholder] End Date: </label>
-                    <input class="form-date" type="datetime-local" name="#">
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_mon" value="1">
+                    <label> Monday </label>
                 </div>
-
-                <h3>Range 2</h3>
-                <input type="checkbox" name="" id=""> Sunday
-                <input type="checkbox" name="" id=""> Monday
-                <input type="checkbox" name="" id=""> Tuesday
-                <input type="checkbox" name="" id=""> Wednesday
-                <input type="checkbox" name="" id=""> Thursday
-                <input type="checkbox" name="" id=""> Friday
-                <input type="checkbox" name="" id=""> Saturday
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_tues" value="2">
+                    <label> Tuesday </label>
+                </div>
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_wed" value="3">
+                    <label> Wednesday </label>
+                </div>
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_thurs" value="4">
+                    <label> Thursday </label>
+                </div>
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_fri" value="5">
+                    <label> Friday </label>
+                </div>
+                <div class="form-field">
+                    <input type="checkbox" name="recurring_sat" value="6">
+                    <label> Saturday </label>
+                </div>
                 <!-- End place holders -->
 
-                <div class="form-field">
+                <!-- <div class="form-field">
                     <label>Is Recurring: </label>
                     <input type="checkbox" name="is-recurring">
-                </div>
+                </div> -->
 
                 <div class="form-text-field">
                     <input class="textfield-form" type="text" id="description" name="message" placeholder=" "></input><label for="description" class="form-label">Description</label>
