--- a/integrated_calendar/views/edit_schedule.html
+++ b/integrated_calendar/views/edit_schedule.html
@@ -39,10 +39,41 @@
                 <input class="form-date" type="date" name="remind-date">
             </div>
 
+            <!-- Place holders while waiting for the recurring range -->
             <div class="form-field">
+                <input type="checkbox" name="recurring_sun" value="0" class="recurring">
+                <label> Sunday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_mon" value="1" class="recurring">
+                <label> Monday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_tues" value="2" class="recurring">
+                <label> Tuesday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_wed" value="3" class="recurring">
+                <label> Wednesday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_thurs" value="4" class="recurring">
+                <label> Thursday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_fri" value="5" class="recurring">
+                <label> Friday </label>
+            </div>
+            <div class="form-field">
+                <input type="checkbox" name="recurring_sat" value="6" class="recurring">
+                <label> Saturday </label>
+            </div>
+            <!-- End place holders -->
+
+            <!-- <div class="form-field">
                 <label>Is Recurring: </label>
                 <input type="checkbox" name="is-recurring" disabled>
-            </div>
+            </div> -->
 
             <div class="form-text-field">
                 <input class="textfield-form" type="text" id="description" name="message" placeholder=" "></input><label for="description" class="form-label">Description</label>
