changed type date to datetime localk

--- a/integrated_calendar/views/add_schedule.html
+++ b/integrated_calendar/views/add_schedule.html
@@ -29,7 +29,7 @@
 
                 <div class="form-field-date">
                     <label>Remind Date: </label>
-                    <input class="form-date" type="date" name="remind-date">
+                    <input class="form-date" type="datetime-local" name="remind-date">
                 </div>
 
                 <div class="form-field">
