--- a/integrated_calendar/views/edit_schedule.html
+++ b/integrated_calendar/views/edit_schedule.html
@@ -36,7 +36,7 @@
 
             <div class="form-field-date">
                 <label>Remind Date: </label>
-                <input class="form-date" type="date" name="remind-date">
+                <input class="form-date" type="datetime-local" name="remind-date">
             </div>
 
             <div class="form-field">
